{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 658,
  "lineage": "aa746808-f8fa-18a0-9e14-5a1f7c047840",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_ssh_rdp_icmp_network2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "22",
                  "3389"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-02-02T01:58:13.320-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-ngt-training/global/firewalls/firewall-allow-http-ssh-rdp-icmp-network2",
            "log_config": [],
            "name": "firewall-allow-http-ssh-rdp-icmp-network2",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/networks/vpc-net-2",
            "priority": 0,
            "project": "gcp-ngt-training",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/firewalls/firewall-allow-http-ssh-rdp-icmp-network2",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": [
              "serviceaccount-2@gcp-ngt-training.iam.gserviceaccount.com"
            ],
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network2",
            "google_service_account.serviceaccount_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "network1_allow_http_ssh_rdp_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "3389"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-02-02T01:58:23.880-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-ngt-training/global/firewalls/firewall1-allow-http-ssh-rdp-icmp",
            "log_config": [],
            "name": "firewall1-allow-http-ssh-rdp-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/networks/vpc-net-1",
            "priority": 0,
            "project": "gcp-ngt-training",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/firewalls/firewall1-allow-http-ssh-rdp-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": [
              "serviceaccount-1@gcp-ngt-training.iam.gserviceaccount.com"
            ],
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network1",
            "google_service_account.serviceaccount_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/gcp-ngt-training/global/networks/vpc-net-1",
            "mtu": 0,
            "name": "vpc-net-1",
            "project": "gcp-ngt-training",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/networks/vpc-net-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/gcp-ngt-training/global/networks/vpc-net-2",
            "mtu": 0,
            "name": "vpc-net-2",
            "project": "gcp-ngt-training",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/networks/vpc-net-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "r1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "10.130.0.0/23",
            "id": "projects/gcp-ngt-training/global/routes/router1",
            "name": "router1",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/networks/vpc-net-1",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "projects/gcp-ngt-training/zones/europe-west1-c/instances/vm2-eu-net1",
            "next_hop_instance_zone": "europe-west1-c",
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 0,
            "project": "gcp-ngt-training",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/routes/router1",
            "tags": [
              "vm1"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network1",
            "google_compute_subnetwork.vpc_subnetwork2",
            "google_service_account.serviceaccount_1",
            "module.vm2-eu-net1.google_compute_instance.vm_instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "r2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "111.130.0.0/19",
            "id": "projects/gcp-ngt-training/global/routes/route2",
            "name": "route2",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/networks/vpc-net-2",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "projects/gcp-ngt-training/zones/asia-south1-a/instances/vm1-asia-net2",
            "next_hop_instance_zone": "asia-south1-a",
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 0,
            "project": "gcp-ngt-training",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/routes/route2",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network2",
            "google_compute_subnetwork.subnetwork1-network2",
            "google_service_account.serviceaccount_2",
            "module.vm1-asia-net2.google_compute_instance.vm_instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork1-network2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-02T01:58:13.416-08:00",
            "gateway_address": "111.130.0.1",
            "id": "projects/gcp-ngt-training/regions/asia-south1/subnetworks/subnet-1-network2",
            "ip_cidr_range": "111.130.0.0/20",
            "name": "subnet-1-network2",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/networks/vpc-net-2",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-ngt-training",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/regions/asia-south1/subnetworks/subnet-1-network2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-02T01:58:23.937-08:00",
            "gateway_address": "168.130.0.1",
            "id": "projects/gcp-ngt-training/regions/us-central1/subnetworks/subnet-1",
            "ip_cidr_range": "168.130.0.0/20",
            "name": "subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/networks/vpc-net-1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-ngt-training",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/regions/us-central1/subnetworks/subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-02T01:58:24.716-08:00",
            "gateway_address": "10.130.0.1",
            "id": "projects/gcp-ngt-training/regions/europe-west1/subnetworks/subnet-2",
            "ip_cidr_range": "10.130.0.0/24",
            "name": "subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/networks/vpc-net-1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-ngt-training",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/regions/europe-west1/subnetworks/subnet-2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network1"
          ]
        }
      ]
    },
    {
      "module": "module.vm1-asia-net2",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "debian-cloud/debian-9",
                    "size": 0
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/zones/asia-south1-a/disks/vm1-asia-net2"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcp-ngt-training/zones/asia-south1-a/instances/vm1-asia-net2",
            "instance_id": "5084276593364822817",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "DEN8MLiYPgc=",
            "metadata_startup_script": "sudo apt-get update \u0026\u0026 sudo apt-get install apache2 -y \u0026\u0026 echo '\u003c!doctype html\u003e\u003chtml\u003e\u003cbody\u003e\u003ch1\u003eHello World!\u003c/h1\u003e\u003c/body\u003e\u003c/html\u003e' | sudo tee /var/www/html/index.html",
            "name": "vm1-asia-net2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.93.191.185",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/networks/vpc-net-2",
                "network_ip": "111.130.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/regions/asia-south1/subnetworks/subnet-1-network2",
                "subnetwork_project": "gcp-ngt-training"
              }
            ],
            "project": "gcp-ngt-training",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/zones/asia-south1-a/instances/vm1-asia-net2",
            "service_account": [
              {
                "email": "serviceaccount-2@gcp-ngt-training.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "tags": [
              "http-server",
              "vm3"
            ],
            "tags_fingerprint": "GZTSe6ndGIw=",
            "zone": "asia-south1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network2",
            "google_compute_subnetwork.subnetwork1-network2",
            "google_service_account.serviceaccount_2"
          ]
        }
      ]
    },
    {
      "module": "module.vm1-us-net1",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "debian-cloud/debian-9",
                    "size": 0
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/zones/us-central1-a/disks/vm1-us-net1"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcp-ngt-training/zones/us-central1-a/instances/vm1-us-net1",
            "instance_id": "3317859353152187191",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "kqBClctcP_k=",
            "name": "vm1-us-net1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.222.91.95",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/networks/vpc-net-1",
                "network_ip": "168.130.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/regions/us-central1/subnetworks/subnet-1",
                "subnetwork_project": "gcp-ngt-training"
              }
            ],
            "project": "gcp-ngt-training",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/zones/us-central1-a/instances/vm1-us-net1",
            "service_account": [
              {
                "email": "serviceaccount-1@gcp-ngt-training.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "tags": [
              "vm1"
            ],
            "tags_fingerprint": "giYMzLJm3jo=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network1",
            "google_compute_subnetwork.vpc_subnetwork1",
            "google_service_account.serviceaccount_1"
          ]
        }
      ]
    },
    {
      "module": "module.vm2-asia-net2",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "debian-cloud/debian-9",
                    "size": 0
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/zones/asia-south1-b/disks/vm2-asia-net2"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcp-ngt-training/zones/asia-south1-b/instances/vm2-asia-net2",
            "instance_id": "788615458283055905",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "kqBClctcP_k=",
            "name": "vm2-asia-net2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.93.146.147",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/networks/vpc-net-2",
                "network_ip": "111.130.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/regions/asia-south1/subnetworks/subnet-1-network2",
                "subnetwork_project": "gcp-ngt-training"
              }
            ],
            "project": "gcp-ngt-training",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/zones/asia-south1-b/instances/vm2-asia-net2",
            "service_account": [
              {
                "email": "serviceaccount-2@gcp-ngt-training.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "tags": [
              "vm4"
            ],
            "tags_fingerprint": "pDjmlnNDw3U=",
            "zone": "asia-south1-b"
          },
          "dependencies": [
            "google_compute_network.vpc_network2",
            "google_compute_subnetwork.subnetwork1-network2",
            "google_service_account.serviceaccount_2"
          ]
        }
      ]
    },
    {
      "module": "module.vm2-eu-net1",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "debian-cloud/debian-9",
                    "size": 0
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/zones/europe-west1-c/disks/vm2-eu-net1"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcp-ngt-training/zones/europe-west1-c/instances/vm2-eu-net1",
            "instance_id": "1257032575929019148",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "kqBClctcP_k=",
            "name": "vm2-eu-net1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.79.71.59",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/networks/vpc-net-1",
                "network_ip": "10.130.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/regions/europe-west1/subnetworks/subnet-2",
                "subnetwork_project": "gcp-ngt-training"
              }
            ],
            "project": "gcp-ngt-training",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/zones/europe-west1-c/instances/vm2-eu-net1",
            "service_account": [
              {
                "email": "serviceaccount-1@gcp-ngt-training.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "tags": [
              "vm2"
            ],
            "tags_fingerprint": "vOtSsfHNEoY=",
            "zone": "europe-west1-c"
          },
          "dependencies": [
            "google_compute_network.vpc_network1",
            "google_compute_subnetwork.vpc_subnetwork2",
            "google_service_account.serviceaccount_1"
          ]
        }
      ]
    }
  ]
}